--- a/SF-fruit/goodsDetail.html
+++ b/SF-fruit/goodsDetail.html
@@ -14,20 +14,120 @@
 
 <link rel="stylesheet" type="text/css" href="style/MobReset.css" >
 <link rel="stylesheet" type="text/css" href="style/style.css" >
+<link rel="stylesheet" type="text/css" href="style/plug/swiper.css" >
 <style type="text/css">
-
+    .swiper-container {height: 100%; width: 100%;}
+    .swiper-slide {height: 100%; width: 100%;}
+    .swiper-slide a {display: block; height: 100%; width: 100%;}
+    .swiper-pagination-bullet-active {background: #ff9600;}
+    .swiper-lazy-preloader {opacity: 0.4}
 </style>
 
 </head>
 <body>
 <div class="wrap">
+    <section class="detailsBox contain js_page1" style="z-index: 5" >
+        <div class="detailsInfo">
+            <section class="">
+                <!-- 轮播 -->
+                <section class="silderBox" style="margin-top: 0;">
+                    <div class="swiper-container js_detailsImg">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                                <img data-src="image/goodsSilde.jpg" class="swiper-lazy" src="image/loadImg640-550.png">
+                                <div class="swiper-lazy-preloader"></div>
+                            </div>
+                            <div class="swiper-slide">
+                                <img data-src="image/goodsSilde.jpg" class="swiper-lazy" src="image/loadImg640-550.png">
+                                <div class="swiper-lazy-preloader"></div>
+                            </div>
+                            <div class="swiper-slide">
+                                <img data-src="image/goodsSilde.jpg" class="swiper-lazy" src="image/loadImg640-550.png">
+                                <div class="swiper-lazy-preloader"></div>
+                            </div>
+                            <div class="swiper-slide">
+                                <img data-src="image/goodsSilde.jpg" class="swiper-lazy" src="image/loadImg640-550.png">
+                                <div class="swiper-lazy-preloader"></div>
+                            </div>
+                        </div>
+                        <div class="swiper-pagination js_pagin"></div>
+                        <div class="swiper-button-next swiper-button-white js_BNext" style="display: none;"></div>
+                        <div class="swiper-button-prev swiper-button-white js_BPrev" style="display: none;"></div>
+                    </div>
+                </section>
+                <!-- 产品信息 -->
+                <section class="goodsInfo">
+                    <h2>【新西兰阳光金奇异果】 当季特价</h2>
+                    <div class="sideInfo">水果维C之王，提供2斤/5斤装任您选择</div>
+                    <div class="priceBox"><em>¥</em><span>29.90~98.00</span></div>
+                    <div class="HBox sendWay">
+                        <p class="Bflex1">配送方式：<span>顺丰免邮</span></p>
+                        <p class="Bflex1">已售出：<span>5000</span>份</p>
+                        <i class="splitline" ></i>
+                    </div>
+                </section>
+                <!-- 联系客服 -->
+                <section class="serviceInfo">
+                    <h3>售后客服专线</h3>
+                    <p class="clearfix">
+                        <a class="fl" href="tel:0755-83867555"><em class="icon-Tel"></em>0755-83867555</a>
+                        <a class="fr btnA" href="tel:0755-83867555">联系客服</a>
+                    </p>
+                    <p class="clearfix">
+                        <a class="fl" href="tel:13825540110" ><em class="icon-Iphone"></em>13825540110</a>
+                        <a class="fr btnA" href="tel:13825540110">拨打手机</a>
+                    </p>
+                    <p class="clearfix"><a class="fl" href="javascript:;" ><em class="icon-WX"></em>Kimvitor 009</a></p>
+                </section>
+            </section>
+            <section class="pullTip pullTip-bottom "><em class="icoStyle icon-arrow-down js_pullTip"></em><span>下拉查看详情</span></section>
+        </div>
+    </section>
+    <section class="detailsBox contain js_page2" style="z-index: 4">
+        <div class="detailsInfo">
+            <section class="pullTip pullTip-top "><em class="icoStyle icon-arrow-up js_pullTip"></em><span>上拉返回</span></section>
+            <!-- 商品信息 -->
+            <section class="detailImg">
+                <h3>商品信息</h3>
+                <img src="image/goodsDetail.jpg">
+            </section>
+            <!-- 联系客服说明 -->
+            <section class="serviceBot HBox">
+                <div class="Bflex1">
+                    <a href="tel:0755-3639-1888" style="font-size: 1.8rem;">0755-3639-1888</a>
+                    <span style="font-size: 1.8rem;">平台服务专线</span>
+                </div>
+                <div class="Bflex1">
+                    <a class="btnA" href="tel:0755-3639-1888">在线平台客服</a>
+                    <span>(09:00-21:00节假日除外)</span>
+                </div>
+            </section>
+            <!-- 商家信息 -->
+            <section class="storeInfo">
 
+            </section>
+        </div>
+    </section>
+
+
+
+    <!-- 底部 -->
+    <section class="footer detailsBot ">
+        <nav>
+            <ul class="HBox">
+                <li class="Bflex1"><a href="myOrder.html"><em class="icoStyle  icon-MyOrder"></em><span>我的订单</span></a><i class="splitline"></i></li>
+                <li class="Bflex1"><a href="shopCar.html"><em class="icoStyle icon-MyShopCar"><i class="userNum">100</i></em><span>购物车</span></a></li>
+                <li class=" deButton deAddCar js_deAddCar"><a href="javascript:;">加入购物车</a></li>
+                <li class=" deButton deBuyOnce js_deBuyOnce"><a href="javascript:;">立即购买</a></li>
+            </ul>
+        </nav>
+    </section>
 </div>
-
 <script type="text/javascript" src="js/plug/sea/sea.min.js"></script>
 <script type="text/javascript" src="js/plug/jquery.min.js"></script>
-<script type="text/javascript" src="js/global.js"></script>
-<script type="text/javascript"></script>
+<script type="text/javascript">
+    seajs.use(['./js/slide.js','./js/global.js'],function() {});
+</script>
 </body>
 </html>
 
