--- a/SF-fruit/errUpdata.html
+++ b/SF-fruit/errUpdata.html
@@ -2,7 +2,7 @@
 <html class="">
 <head>
 <meta charset="utf-8">
-<title></title>
+<title>系统升级</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0" />
 <!-- 网站开启对web app程序的支持 -->
 <meta content="yes" name="apple-mobile-web-app-capable"></meta>
@@ -14,19 +14,29 @@
 
 <link rel="stylesheet" type="text/css" href="style/MobReset.css" >
 <link rel="stylesheet" type="text/css" href="style/style.css" >
+<link rel="stylesheet" type="text/css" href="style/animate.min.css" >
 <style type="text/css">
-
 </style>
 
 </head>
-<body>
+<body >
 <div class="wrap">
+    <section class="contain containAll" >
+        <div class="errIcon icon-rocket bounceInUp animated">
 
+        </div>
+        <div class="errText">
+            <h2>对不起，系统升级维护中</h2>
+            <p></p>
+            <p class="tip">火速回来</p>
+            <a href="index.html">返回首页</a>
+        </div>
+    </section>
+    <div class="icoStyle  icon-arrow-up goTopIcon js_goTop" style="display: none"></div>
 </div>
+<script type="text/javascript">
 
-<script type="text/javascript" src="js/plug/sea/sea.min.js"></script>
-<script type="text/javascript" src="js/plug/jquery.min.js"></script>
-<script type="text/javascript"></script>
+</script>
 </body>
 </html>
 
