--- a/SF-fruit/err404.html
+++ b/SF-fruit/err404.html
@@ -22,7 +22,7 @@
 <body >
 <div class="wrap">
     <section class="contain containAll" >
-        <div class="errIcon icon-unGoods zoomIn animated">
+        <div class="errIcon icon-unPage zoomIn animated">
 
         </div>
         <div class="errText">
