--- a/SF-fruit/index.html
+++ b/SF-fruit/index.html
@@ -31,7 +31,7 @@
                 <input class=" js_searchTxt" type="text" placeholder="请输入你想要的美食" />
             </p>
             <em class="clearBtn icoStyle js_clearBtn active"></em>
-            <span class="searchBtn"><a href="searchList.html">搜 索</a></span>
+            <span class="searchBtn js_searchBtn"><a _href="searchList.html">搜 索</a></span>
         </div>
         <div class="HBox js_searchArea" style="display: none1">
             <div class="logoBox" >
@@ -150,36 +150,7 @@
                                                 </a>
                                                 <p class="addCar js_addCar" _id=3><em class="icon-MyShopCar"><i class="addIcon"></i></em></p>
                                             </li>
-                                            <li class="picList">
-                                                <a href="goodsDetail.html">
-                                                    <figure>
-                                                        <img src="static/v1/image/goods.jpg">
-                                                        <i class="tip-tj"></i>
-                                                    </figure>
-                                                    <aside class="priceArea">
-                                                        <h4>4智利进口蓝莓智利进口蓝莓智利进口蓝莓智利进口蓝莓</h4>
-                                                        <p class="clearfix">
-                                                            <i>￥</i><span class="goodsPrice">29.00</span><span class="goodsWeight">/2500g</span>
-                                                        </p>
-                                                    </aside>
-                                                </a>
-                                                <p class="addCar js_addCar" _id=4><em class="icon-MyShopCar"><i class="addIcon"></i></em></p>
-                                            </li>
-                                            <li class="picList">
-                                                <a href="goodsDetail.html">
-                                                    <figure>
-                                                        <img src="static/v1/image/goods.jpg">
-                                                        <i class="tip-tj"></i>
-                                                    </figure>
-                                                    <aside class="priceArea">
-                                                        <h4>智利进口蓝莓智利进口蓝莓智利进口蓝莓智利进口蓝莓</h4>
-                                                        <p class="clearfix">
-                                                            <i>￥</i><span class="goodsPrice">29.00</span><span class="goodsWeight">/2500g</span>
-                                                        </p>
-                                                    </aside>
-                                                </a>
-                                                <p class="addCar js_addCar"><em class="icon-MyShopCar"><i class="addIcon"></i></em></p>
-                                            </li>
+
                                         </ul>
                                     </div>
                                 </section>
@@ -616,7 +587,7 @@
         </section>
         <section class="HistorySearch">
             <h2>历史记录</h2>
-            <div class="historyList">
+            <div class="historyList js_hisList">
                 <ul>
                     <li>车厘子</li>
                     <li>蓝莓</li>
@@ -627,7 +598,7 @@
             </div>
         </section>
         <section class="HClearBtn">
-            <button>清空历史记录</button>
+            <button class="js_HClearBtn">清空历史记录</button>
         </section>
     </section>
 
