--- a/SF-fruit/address.html
+++ b/SF-fruit/address.html
@@ -78,10 +78,10 @@
     </section>
 </div>
 
-
+<script type="text/javascript" src="static/v1/js/plug/sea/sea.min.js"></script>
 <script type="text/javascript" src="static/v1/js/plug/jquery.min.js"></script>
 <script type="text/javascript">
-    //seajs.use(['./js/global.js'],function() {});
+    seajs.use(['./static/v1/js/global.js'],function() {});
 
 $(function() {
     var _tip = '[默认]';
