--- a/SF-fruit/errLogin.html
+++ b/SF-fruit/errLogin.html
@@ -23,9 +23,9 @@
 <div class="wrap">
     <section class="contain containAbs containAll" >
         <div class="errIcon icon-person flipInX animated"></div>
-        <div class="errText" style="bottom: 16%;">
-            <h2>登录失效！</h2>
-            <p>请重新打开</p>
+        <div class="errText" >
+            <h2>登录失效！请重新打开</h2>
+            <p></p>
             <p class="tip"><span id="timer">3</span>秒后自动跳转到首页</p>
             <a href="index.html">返回首页</a>
         </div>
