--- a/SF-fruit/myOrder.html
+++ b/SF-fruit/myOrder.html
@@ -772,8 +772,8 @@
     <section class="footer js_footer">
         <nav>
             <ul class="HBox">
-                <li class="" style="width: 100px"><a href="index.html"><em class="icoStyle  icon-home"></em><span>首页</span></a><i class="splitline"></i></li>
-                <li class="" style="width: 100px"><a href="myAccount.html"><em class="icoStyle  icon-MyAccount"></em><span>账户管理</span></a><i class="splitline"></i></li>
+                <li class="" style="width: 24%"><a href="index.html"><em class="icoStyle  icon-home"></em><span>首页</span></a><i class="splitline"></i></li>
+                <li class="" style="width: 34%"><a href="myAccount.html"><em class="icoStyle  icon-MyAccount"></em><span>账户管理</span></a><i class="splitline"></i></li>
                 <li class="Bflex1"><a href="service.html"><em class="icoStyle icon-service"></em><span>平台服务中心</span></a></li>
             </ul>
         </nav>
