--- a/SF-fruit/err404.html
+++ b/SF-fruit/err404.html
@@ -34,9 +34,7 @@
     </section>
     <div class="icoStyle  icon-arrow-up goTopIcon js_goTop" style="display: none"></div>
 </div>
-<script type="text/javascript">
-
-</script>
+<script type="text/javascript"></script>
 </body>
 </html>
 
