--- a/SF-fruit/errLTime.html
+++ b/SF-fruit/errLTime.html
@@ -22,7 +22,7 @@
 <div class="wrap">
     <section class="contain containAbs containAll" >
         <div class="errIcon icon-longTime myRotate"></div>
-        <div class="errText" style="bottom: 16%;">
+        <div class="errText">
             <h2>登录失效！</h2>
             <p>请在服务号菜单中打开</p>
             <p class="tip"><span id="timer">3</span>秒后自动跳转到首页</p>
@@ -47,8 +47,6 @@
                 oTime.innerHTML = iNow;
             }
         },1000);
-
-
     };
 </script>
 </body>
